--- a/entries/entry1/assets/entry1.css
+++ b/entries/entry1/assets/entry1.css
@@ -537,3 +537,56 @@ li a:hover:not(.active) {
 .green-paragraph {
     margin-top: 0; 
 }
+
+/* GGreen section */
+.green-section{
+  width: 100%;
+  height: 800px;
+  background: rgb(222, 210, 240);;
+}
+
+.green-content h1 {
+font-size: 63px;
+color: rgb(75, 56, 105);;
+font-weight: 700;
+margin-bottom: 4px;
+}
+.green-content {
+width: 40%;
+padding: 0px 57px;
+}
+.green-bttom {
+padding: 116px 0;
+}
+.green-img {
+width: 47%;
+}
+.green-img img {
+width: 500px;
+border-radius: 50%;
+margin: 0 85px;
+}
+.green-paragraph p {
+font-size: 24px;
+line-height: 29px;
+font-weight: 300;
+}
+.green-paragraph{
+  margin-top: 10px;
+}
+
+.left{
+  float: left;
+}
+.right{
+  float: right;
+}
+.text-left{
+  text-align: left;
+}
+.text-center{
+  text-align: center;
+}
+.text-right{
+  text-align: right;
+}
