--- a/entries/entry1/assets/entry1.css
+++ b/entries/entry1/assets/entry1.css
@@ -411,7 +411,8 @@ li a:hover:not(.active) {
   #player {
     width: 100%;
     border: 2px solid #111;
-    box-shadow: 0 0 50px rgb(255, 205, 118)
+    box-shadow: 0 0 50px rgb(255, 205, 118);
+    margin-left: 100px;
   }
   
   #capture-button {
@@ -421,7 +422,7 @@ li a:hover:not(.active) {
     height: 50px;
     bottom: 20px;
     left: 50%;
-    margin-left: -25px;
+    margin-left: -50px;
     border-radius: 50%;
     background-color: #ff0000;
     border: 2px solid #fff;
@@ -541,7 +542,7 @@ li a:hover:not(.active) {
 /* GGreen section */
 .green-section{
   width: 100%;
-  height: 900px;
+  height: 500px;
   background: rgb(251, 238, 215);
 }
 
