--- a/entries/entry2/assets/entry2.css
+++ b/entries/entry2/assets/entry2.css
@@ -317,7 +317,6 @@ section {
   color: rgb(252, 220, 226);
   font-size: 40px;
   flex: 1;
-  padding: 20px;
 }
 
 
@@ -345,7 +344,6 @@ font-family: "Dela Gothic One", sans-serif;
 
 body{
 background-color:rgb(234, 192, 199);
-text-align: center;
 }
 
 .drag-container {
@@ -424,8 +422,7 @@ outline: none;
 .game-title {
 color: rgb(234, 192, 199); 
 background-color: rgb(224, 113, 133); 
-padding: 10px 20px;
-border-radius: 8px;
+padding: 10px 300px;
 display: inline-block;
 font-size: 40px;
 font-weight: bold;
@@ -435,3 +432,15 @@ text-align: center;
 box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+
+.text-section4 {
+  margin-left: 30vh;
+  margin-right: 30vh;
+  text-align: center;
+  margin-bottom: 80px;
+  margin-top: 20px;
+  color:rgb(224, 113, 133);
+  font-family:Garamond, Georgia, 'Times New Roman', Times, serif;
+  font-size: 20px;
+  font-style: italic;
+}
