--- a/entries/entry3/assets/entry3.css
+++ b/entries/entry3/assets/entry3.css
@@ -44,7 +44,7 @@ video::-webkit-media-controls {
   text-align: center;
   line-height: 1;
   font-size: 60px;
-  color: black;
+  color: rgb(237, 229, 248);
   font-family: "Dela Gothic One", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -57,7 +57,7 @@ video::-webkit-media-controls {
   text-align: center;
   line-height: 1;
   font-size: 60px;
-  color: black;
+  color: rgb(237, 229, 248);
   font-family: 'Apple Garamond';
   font-weight: 400;
   font-style: italic;
@@ -182,13 +182,13 @@ section {
   color: rgb(237, 229, 248);
   font-size: 40px;
   flex: 1;
-  padding: 20px;
 }
 
 
 .purple-paragraph p {
   margin-top: 5px;
   line-height: 1.6;
+  font-size: 20px;
   color: rgb(237, 229, 248);
 }
 
@@ -210,8 +210,7 @@ font-family: "Dela Gothic One", sans-serif;
 .game-title {
 color: rgb(237, 229, 248);
 background-color: rgb(75, 56, 105);
-padding: 10px 20px;
-border-radius: 8px;
+padding: 10px 300px;
 display: inline-block;
 font-size: 40px;
 font-weight: bold;
