--- a/entries/entry4/assets/entry4.css
+++ b/entries/entry4/assets/entry4.css
@@ -358,8 +358,8 @@ box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .outfit-items a img {
-  width: 200px; /* Adjust based on your preferred image size */
-  max-width: 200px; /* Set a max width for the images */
+  width: 400px; /* Adjust based on your preferred image size */
+  height: 400px; /* Set a max width for the images */
   margin: 10px;
   display: inline-block;
 }
