--- a/entries/entry5/assets/entry5.css
+++ b/entries/entry5/assets/entry5.css
@@ -194,7 +194,7 @@ ul {
   }
 
 
-.coffee-container {
+  .coffee-container {
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -216,8 +216,15 @@ ul {
 
 .coffee-fill {
     width: 100%;
-    height: 0;
     background-color: #3e2723; /* Brown color for coffee */
+    position: absolute;
+    bottom: 0;
+    transition: height 0.5s ease-in-out;
+}
+
+.milk-fill {
+    width: 100%;
+    background-color: #f5deb3; /* Light color for milk/foam */
     position: absolute;
     bottom: 0;
     transition: height 0.5s ease-in-out;
