--- a/entries/entry5/assets/entry5.css
+++ b/entries/entry5/assets/entry5.css
@@ -202,9 +202,9 @@ ul {
 }
 
 .coffee-cup {
-    width: 150px;
-    height: 200px;
-    border-radius: 25px 25px 0 0;
+    width: 300px;
+    height: 400px;
+    border-radius: 0 0 25px 25px;
     border: 2px solid #333;
     position: relative;
     background-color: #f5f5f5;
@@ -249,3 +249,19 @@ button.coffee-btn {
 button.coffee-btn:hover {
     background-color: #F4511E;
 }
+
+.outfit-title {
+    background-color: rgb(224, 113, 133); /* Choose a background color */
+    padding: 10px 20px;
+    text-align: center;
+    border-radius: 5px;
+    margin-bottom: 20px; /* Adds space between the title and the images */
+  }
+  
+  .outfit-title h2 {
+    font-size: 40px;
+    color: rgb(234, 192, 199); /* Change the text color if needed */
+    font-family: "Dela Gothic One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
