--- a/entries/entry5/assets/entry5.css
+++ b/entries/entry5/assets/entry5.css
@@ -239,7 +239,8 @@ button.coffee-btn {
     color: white;
     border: none;
     padding: 10px 20px;
-    font-size: 16px;
+    font-size: 30px;
+    font-family: "Dela Gothic One", sans-serif;
     margin: 10px;
     border-radius: 5px;
     cursor: pointer;
