--- a/entries/entry5/assets/entry5.css
+++ b/entries/entry5/assets/entry5.css
@@ -273,7 +273,7 @@ body,h2,h3,h4,h5,h6,span,b,a,small,div{
 
   .receipt-container {
     width: 300px;
-    margin: 0 auto;
+    margin: 20px auto;
     padding: 20px;
     background-color: #fdf5e6;
     border: 2px dashed #d4a373;
@@ -290,12 +290,8 @@ body,h2,h3,h4,h5,h6,span,b,a,small,div{
     text-transform: uppercase;
   }
   
-  .receipt-list {
-    list-style-type: none;
-    padding: 0;
+  .receipt-item {
     font-size: 16px;
-  }
-  
-  .receipt-list li {
     margin: 5px 0;
   }
+  
