--- a/entries/entry5/assets/entry5.css
+++ b/entries/entry5/assets/entry5.css
@@ -272,32 +272,33 @@ body,h2,h3,h4,h5,h6,span,b,a,small,div{
   }
 
   .receipt-container {
-    width: 300px;
+    width: 350px;
     margin: 20px auto;
     padding: 20px;
-    background-color: #fdf5e6;
-    border: 2px dashed #d4a373;
+    background-color: #ffffff;
+    border: 2px dashed #000000;
     border-radius: 8px;
     text-align: center;
     font-family: "Prompt", sans-serif;
-    color: #d47473;
+    color: #F4511E;
   }
   
   .receipt-title {
-    font-size: 20px;
+    font-size: 60px;
+    line-height: 1;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     text-transform: uppercase;
   }
   
   .receipt-item {
-    font-size: 16px;
+    font-size: 30px;
     margin: 5px 0;
   }
   
   .receipt-line {
     border: 0;
-    border-top: 2px solid #d4a373;
+    border-top: 2px solid #000000;
     margin: 10px 0;
   }
   
